Fix about header on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,7 @@ h1 {
     width: 14rem;
   }
 
-  #home {
+  #home, #about {
     padding-top: 65px;
   }
 
